--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <a class="nav-link text- fw-bold" href="src/videos.html"> الفيدوهات </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text- fw-bold" href="#tbro3"> اتبرع الآن</a>
+                        <a class="nav-link text- fw-bold" href="src/tbroaa.html"> اتبرع الآن</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text- fw-bold" href="#footer"> تواصل معنا</a>
@@ -98,7 +98,7 @@
                         <a class="nav-link text- fw-bold" href="src/videos.html"> الفيدوهات </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text- fw-bold" href="#tbro3"> اتبرع الآن</a>
+                        <a class="nav-link text- fw-bold" href="src/tbroaa.html"> اتبرع الآن</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text- fw-bold" href="#footer"> تواصل معنا</a>
@@ -142,7 +142,7 @@
                                 زكاتك</a>
                         </li>
                     </a>
-                    <a href="#tbro3">
+                    <a href="src/tbroaa.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
                             <!-- <i class="fa-solid fa-money-bill-trend-up fa-2x text-success pointer"></i> -->
                             <img class="icon-img rounded-circle" src="src/images/final img/اتبرع-الان..png" alt="">
@@ -167,7 +167,7 @@
                                 زكاتك</a>
                         </li>
                     </a>
-                    <a href="#tbro3">
+                    <a href="src/tbroaa.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
                             <!-- <i class="fa-solid fa-money-bill-trend-up fa-2x text-success pointer"></i> -->
                             <img class="icon-img rounded-circle" src="src/images/final img/اتبرع-الان..png" alt="">
@@ -182,12 +182,12 @@
     <header id="main" class="bg- position-relative">
         <div id="carouselExampleInterval" class="carousel d-flex slide" data-bs-ride="carousel">
             <div class="carousel-inner ">
-                <div class="carousel-item active position-relative " data-bs-interval="5000">
+                <div class="carousel-item active position-relative " data-bs-interval="">
                     <img src="src/images/cover-photo-1920-x-1080.png" class=" d-block w-100" alt="...">
                 </div>
-                <div class="carousel-item" data-bs-interval="120000">
+                <!-- <div class="carousel-item" data-bs-interval="120000">
                     <video src="src/images/final img/video.mp4" muted autoplay class="d-block w-100"></video>
-                </div>
+                </div> -->
             </div>
             <div b class="position-absolute head-container d-flex flex-column me-4 justify-content-center">
                 <div class="d-flex flex-column bg-">
@@ -265,7 +265,7 @@
                     <a class="nav-link text- fw-bold" href="src/videos.html"> الفيدوهات </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text- fw-bold" href="src/register.html"> اتبرع الآن</a>
+                    <a class="nav-link text- fw-bold" href="src/tbroaa.html"> اتبرع الآن</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text- fw-bold" href="#footer"> تواصل معنا</a>
