--- a/src/register.html
+++ b/src/register.html
@@ -48,7 +48,7 @@
                         <a class="nav-link text- fw-bold" href="videos.html"> الفيدوهات </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text- active fw-bold" href="register.html"> اتبرع الآن</a>
+                        <a class="nav-link text- active fw-bold" href="tbroaa.html"> اتبرع الآن</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text- fw-bold" href="#footer"> تواصل معنا</a>
@@ -67,10 +67,10 @@
                                 زكاتك</a>
                         </li>
                     </a>
-                    <a href="register.html">
+                    <a href="tbroaa.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
                             <img class="icon-img rounded-circle" src="images/final img/اتبرع-الان..png" alt="">
-                            <a class="nav-link  mx-1 fw-bold" href="register.html">اتبرع الآن</a>
+                            <a class="nav-link  mx-1 fw-bold" href="tbroaa.html">اتبرع الآن</a>
                         </li>
                     </a>
                 </ul>
@@ -90,10 +90,10 @@
                                 زكاتك</a>
                         </li>
                     </a>
-                    <a href="register.html">
+                    <a href="tbroaa.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
                             <img class="icon-img rounded-circle" src="images/final img/اتبرع-الان..png" alt="">
-                            <a class="nav-link  mx-1 fw-bold" href="register.html">اتبرع الآن</a>
+                            <a class="nav-link  mx-1 fw-bold" href="tbroaa.html">اتبرع الآن</a>
                         </li>
                     </a>
                 </ul>
@@ -126,7 +126,7 @@
                     <a class="nav-link text- fw-bold" href="videos.html"> الفيدوهات </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text- fw-bold" href="register.html"> اتبرع الآن</a>
+                    <a class="nav-link text- active fw-bold" href="tbroaa.html"> اتبرع الآن</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text- fw-bold" href="#footer"> تواصل معنا</a>
@@ -160,12 +160,13 @@
             </div>
 
             <button type="" id="paymentBtn" class=" btn btn-success w-100 mt-4">اتبرع الآن</button>
+            <button type="" id="spinnerLoadBtn" class=" btn btn-success w-100 mt-4 d-none"><i class="fa-solid fa-spinner fa-spin fa-xl"></i></button>
             <a href="allUsersForAdmin.html" class="w-100 mt-4 btn btn-secondary">users <span
                     class="fw-bolder text-dark">*(Admins Only)</span></a>
         </form>
 
     </section>
-
+    <!-- ************************ -->
     <footer id="footer" class="w-100 py-5 bg-body-tertiary">
         <div>
             <div class="container bg-">
