--- a/src/tbroaa.html
+++ b/src/tbroaa.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/rwd.css">
     <link rel="stylesheet" href="css/animate.css">
-<!-- ****************** -->
+    <!-- ****************** -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -22,7 +22,7 @@
         href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Marhey:wght@300..700&display=swap"
         rel="stylesheet">
     <!-- ****************** -->
-    <title>Apoc 3939/ عن الجمعية </title>
+    <title>Apoc 3939/اتبرع الآن </title>
 </head>
 
 <body id="top">
@@ -36,7 +36,7 @@
                         <a class="nav-link text- fw-bold" aria-current="page" href="../index.html">الرئيسية</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text- active fw-bold" href="about.html">عن الجمعية</a>
+                        <a class="nav-link text- fw-bold" href="about.html">عن الجمعية</a>
                     </li>
                     <!-- <li class="nav-item">
                         <a class="nav-link text- fw-bold" href="#"> العناوين </a>
@@ -48,7 +48,7 @@
                         <a class="nav-link text- fw-bold" href="videos.html"> الفيدوهات </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text- fw-bold" href="tbroaa.html"> اتبرع الآن</a>
+                        <a class="nav-link text- active fw-bold" href="tbroaa.html"> اتبرع الآن</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text- fw-bold" href="#footer"> تواصل معنا</a>
@@ -100,7 +100,7 @@
             </div>
         </div>
     </nav>
-    <!-- 0000000000000000000000000 -->
+    <!-- ************************ -->
     <div id="toUp"
         class="bg-mainColor opacity-100 rounded-circle pointer d-flex align-items-center justify-content-center position-fixed">
         <a href="#top"><i class="fa-solid text-white fa-arrow-up fa-xl"></i></a>
@@ -117,7 +117,7 @@
                     <a class="nav-link text- fw-bold" aria-current="page" href="../index.html">الرئيسية</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active text- fw-bold" href="about.html">عن الجمعية</a>
+                    <a class="nav-link text- fw-bold" href="about.html">عن الجمعية</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text- fw-bold" href="photos.html"> البوم الصور </a>
@@ -126,7 +126,7 @@
                     <a class="nav-link text- fw-bold" href="videos.html"> الفيدوهات </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text- fw-bold" href="tbroaa.html"> اتبرع الآن</a>
+                    <a class="nav-link active text- fw-bold" href="tbroaa.html"> اتبرع الآن</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text- fw-bold" href="#footer"> تواصل معنا</a>
@@ -134,119 +134,94 @@
             </ul>
         </div>
     </div>
-    <!-- 0000000000000000000000000 -->
-    <section id="whoWeAre" class="d- bg-body-tertiary py-3 my-">
-        <div class="container">
-            <div class="mb-5 pb-3">
-                <h3 class="h1 text-success mb-5 w-50 m- py-3 border-bottom border-1 introHead">نبذة عن الجمعية</h3>
-                <p class="lead fw-medium text-muted">تأسست الجمعية في عام 2012</p>
-                <p class="lead fw-medium text-muted">توفر جمعية مستشفى سرطان أطفال إسكندرية
-                    كل ما يحتاجه الأطفال مرضى السرطان من علاج
-                    كيميائي أو علاج إشعاعي أو عمليات بالمجان وأيضًا
-                    تعمل الجمعية على توفير كل احتياجات المستشفى
-                    من موارد بشرية وكوادر طبيةبالإضافة إلى الأجهزة
-                    والمستلزمات الطبية وكل ذلك من خلال تبرعاتكم</p>
-            </div>
-            <div class="row mb-3 align-items-center">
-                <div class="col-md-6">
-                    <div>
-                        <p class="lead fw-medium text-muted"><span class="text-success">رؤيتنا :</span> دعم المستشفيات
-                            والمؤسسات العلاجية
-                            لتقديم خدمة طبية على اعلى مستوى للأطفال
-                            مرضى السرطان</p>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div>
-                        <img height="250" class="w-100" src="images/final img/عن-الجمعية-1.png" alt="">
+    <!-- ************************ -->
+    <section id="tbroaPage"
+        class="bg-body-tertiary container d-flex justify-content-evenly m-auto p-4 rounded-3 shadow my-3 bg">
+        <div class="row g-3 justify-content-center">
+            <div class="col-md-4">
+                <div class="bg-success-subtle rounded-3 text-center">
+                    <img class="w-100 p-3" src="images/final img/master-visa.png" alt="">
+                    <div class=" bg-success-subtle rounded-3 py-3 px-2">
+                        <p class="m-0 fw-normal">دلوقتي تقدر تتبرع عن طريق الدفع الالكتروني </p>
+                        <a href="register.html"><button class="btn btn-sm mt-2 fw-bold w-100 btn-outline-success">اتبرع
+                                الان <i class="fa-solid fa-money-bill-trend-up fa-lg me-1 pointer"></i></button></a>
                     </div>
                 </div>
             </div>
-            <div class="row mb-3 align-items-center">
-                <div class="col-md-6">
-                    <div>
-                        <img height="250" class="w-100" src="images/final img/عن-الجمعية-2.png" alt="">
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div>
-                        <p class="lead fw-medium text-muted"><span class="text-success">مهمتنا :</span> توفير الدعم
-                            المادي والاداري لمستشفى
-                            برج العرب الجامعي وتحويلها لمركز متكامل لعلاج
-                            اورام الطفل بالمجان</p>
+            <div class="col-md-4 ">
+                <div class="bg-success-subtle rounded-3 text-center">
+                    <img class="w-100 p-3" src="images/final img/nbe.jpeg" alt="">
+                    <div class=" bg-success-subtle rounded-3 py-4 px-2">
+                        <p class="m-0 fw-normal">دلوقتي تقدر تتبرع عن طريق حساب البنك الأهلي </p>
+                        <p class="m-0 fw-normal">رقم الحساب <span class="text-success ">2033070690373700015</span></p>
                     </div>
                 </div>
             </div>
-            <div class="row mb-3 align-items-center">
-                <div class="col-md-6">
-                    <div>
-                        <p class="lead fw-medium text-muted"><span class="text-success">هدفنا :</span>توفير علاج مجاني
-                            للاطفال محاربي مرض
-                            السرطان دون تمييز ودون قوائم انتظار
-                        </p>
+            <div class="col-md-4 ">
+                <div class="bg-success-subtle rounded-3 text-center">
+                    <img class="w-100 p-3" src="images/final img/misr bank.png" alt="">
+                    <div class=" bg-success-subtle rounded-3 py-4 px-2">
+                        <p class="m-0 fw-normal">دلوقتي تقدر تتبرع عن طريق حساب بنك مصر </p>
+                        <p class="m-0 fw-normal">رقم الحساب <span class="text-success ">20316245676</span></p>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div>
-                        <img height="250" class="w-100" src="images/final img/عن-الجمعية-3.png" alt="">
+            </div>
+            <div class="col-md-4 ">
+                <div class="bg-success-subtle rounded-3 text-center">
+                    <img class="w-100 p-3" src="images/final img/cib-logo-png_seeklogo-201249.png" alt="">
+                    <div class=" bg-success-subtle rounded-3 py-4 px-2">
+                        <p class="m-0 fw-normal">دلوقتي تقدر تتبرع عن طريق حساب CIB </p>
+                        <p class="m-0 fw-normal">رقم الحساب <span class="text-success ">100041327469</span></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 ">
+                <div class="bg-success-subtle rounded-3 text-center">
+                    <img class="w-100 p-3" src="images/final img/qnb-logo-png_seeklogo-225502.png" alt="">
+                    <div class=" bg-success-subtle rounded-3 py-4 px-2">
+                        <p class="m-0 fw-normal">دلوقتي تقدر تتبرع عن طريق حساب QNB </p>
+                        <p class="m-0 fw-normal">رقم الحساب <span class="text-success ">20316245676</span></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 ">
+                <div class="bg-success-subtle rounded-3 text-center">
+                    <img class="w-100 p-3" src="images/final img/العربي الافريقي.png" alt="">
+                    <div class=" bg-success-subtle rounded-3 py-4 px-2">
+                        <p class="m-0 fw-normal"> تقدر تتبرع عن طريق حساب البنك العربي الافريقي </p>
+                        <p class="m-0 fw-normal">رقم الحساب <span class="text-success ">1001595710020201 </span></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 ">
+                <div class="bg-success-subtle rounded-3 text-center">
+                    <img class="w-100 p-3" src="images/final img/fawry-logo-png_seeklogo-326467.png" alt="">
+                    <div class=" bg-success-subtle rounded-3 py-4 px-2">
+                        <p class="m-0 fw-normal">دلوقتي تقدر تتبرع عن طريق خدمة فوري </p>
+                        <p class="m-0 fw-normal">كود خدمة فوري <span class="text-success ">٩٨٦١</span></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 ">
+                <div class="bg-success-subtle rounded-3 text-center">
+                    <img class="w-100 p-3" src="images/final img/opay-new-2023-logo-png_seeklogo-503616.png" alt="">
+                    <div class=" bg-success-subtle rounded-3 py-4 px-2">
+                        <p class="m-0 fw-normal">دلوقتي تقدر تتبرع عن طريق خدمة O-Pay </p>
+                        <p class="m-0 fw-normal">رقم الخدمة <span class="text-success ">3939</span></p>
                     </div>
                 </div>
             </div>
 
-            <div class="my-5">
-                <p class="h2 mb-3 fw-medium text-success">نبذة عن المستشفى</p>
-                <p class="fw-medium lead text-muted">
-                    مستشفى برج العرب الجامعي هي أحد
-                    مستشفيات جامعة الاسكندرية وتقع في مدينة
-                    برج العرب الجديدة وتم إنشاؤها ضمن مشروع
-                    المنحة الهولندية وتم تسليمها لجامعة
-                    اسكندرية لادارتها وتشغيلها بدأ تشغيل مستشفى
-                    برج العرب الجامعي كمستشفى عام في 2008
-                    وفي فبراير2018 تم توقيع بروتوكول التعاون بين
-                    جمعية مستشفى سرطان أطفال إسكندرية
-                    ومستشفيات جامعة الاسكندرية وبناءً عليه تم
-                    تحويل مستشفى برج العرب من مستشفى جامعي
-                    لتصبح اول مستشفى حكومي جامعي متخصص
-                    في علاج سرطان الاطفال في مصر .وتم الافتتاح
-                    الرسمي لمركز علاج أورام الأطفال بمستشفى
-                    برج العرب الجامعي يوم 5 مايو لعام2019
-                    مركز علاج أورام الأطفال الوحيد في وجه بحري
-
-                    وبعد نجاح نموذج التعاون المشترك بين جمعية
-                    مستشفى سرطان أطفال إسكندرية ومستشفى
-                    برج العرب الجامعي في تقديم الخدمة الطبية
-                    المجانية المتميزة للاطفال مرضى السرطان؛ لذا
-                    وجب لسعي لتطوير مستشفى برج العرب
-                    الجامعي لتصبح مؤسسة متكاملة لعلاج السرطان
-                    تخدم كافة مرضى السرطان في مصر
-
-                    يشمل مشروع التطوير
-
-                    بناء مركز للعلاج الاشعاعي
-                    مستشفى إضافي لعلاج سرطان الاطفال
-                    بطاقة 80 سرير
-                    بناء مدرسة تمريض متخصصة في تمريض الأورام
-                    مستشفى متخصص في علاج أورام البالغين
-                    بطاقة 200 سرير
-                    مركز متقدم لابحاث السرطان والبنك الحيوي
-                    على أن يتم تنفيذ المراحل تباعًا والانتهاء من
-                    كافة مراحل المشروع في 2030</p>
-                <p class="lead fw-medium text-muted"><span></span></p>
-                <p class="lead fw-medium text-muted"><span></span></p>
-                <p class="lead fw-medium text-muted"><span></span></p>
-                <p class="lead fw-medium text-muted"><span></span></p>
-                <p class="lead fw-medium text-muted"><span></span></p>
-
-            </div>
         </div>
     </section>
-    <!-- 0000000000000000000000000 -->
+    <!-- ************************ -->
     <footer id="footer" class="w-100 py-5 bg-body-tertiary">
         <div>
             <div class="container bg-">
                 <div class="row align-items-center">
                     <div class="col-md-4">
-                        <a href="../index.html"> <img class="w-100 rounded-circle" src="images/final img/pp-.png" alt=""></a>
+                        <a href="../index.html"> <img class="w-100 rounded-circle" src="images/final img/pp-.png"
+                                alt=""></a>
                     </div>
                     <div class="col-md-4 w-sm-100 my-3">
                         <div class="d-flex w-75 m-auto bg- h-100 align-items-center icons justify-content-around">
@@ -309,6 +284,7 @@
             </div>
         </div>
     </footer>
+
 
 
 
