--- a/src/allUsersForAdmin.html
+++ b/src/allUsersForAdmin.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/rwd.css">
     <link rel="stylesheet" href="css/animate.css">
-<!-- ****************** -->
+    <!-- ****************** -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -28,12 +28,12 @@
 <body>
     <nav id="mainNav" class="navbar fixed- d- bg-white navbar-expand-lg top-0 start-0 end-0 bg-body-">
         <div data-wow-delay=".3s" class="container  bg-">
-            <a class="navbar-brand" href="../index.html"><img class="-circle"
-                    src="images/logo-Apoc-2022.png" alt=""></a>
+            <a class="navbar-brand" href="../index.html"><img class="rounded-" src="images/logo-Apoc-2022.png"
+                    alt=""></a>
             <div class="collapse navbar-collapse d-flex align-items-center bg-" id="navbarSupportedContent">
                 <ul class="navbar-nav text-dark bg- mt-0 m-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link text- active fw-bold" aria-current="page" href="../index.html">الرئيسية</a>
+                        <a class="nav-link text- fw-bold" aria-current="page" href="../index.html">الرئيسية</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text- fw-bold" href="about.html">عن الجمعية</a>
@@ -48,7 +48,7 @@
                         <a class="nav-link text- fw-bold" href="videos.html"> الفيدوهات </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text- fw-bold" href="register.html"> اتبرع الآن</a>
+                        <a class="nav-link text- fw-bold" href="tbroaa.html"> اتبرع الآن</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text- fw-bold" href="#footer"> تواصل معنا</a>
@@ -90,19 +90,19 @@
                                 زكاتك</a>
                         </li>
                     </a>
-                    <a href="register.html">
+                    <a href="tbroaa.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
                             <img class="icon-img rounded-circle" src="images/final img/اتبرع-الان..png" alt="">
-                            <a class="nav-link  mx-1 fw-bold" href="register.html">اتبرع الآن</a>
+                            <a class="nav-link  mx-1 fw-bold" href="tbroaa.html">اتبرع الآن</a>
                         </li>
                     </a>
                 </ul>
             </div>
         </div>
     </nav>
-
+    <!-- 0000000000000000000000 -->
     <section id="adminForm" class="container my-3">
-        <form action="" class="w-75 h-100 m-auto p-4 bg-body-tertiary rounded-2" >
+        <form action="" class="w-75 h-100 m-auto p-4 bg-body-tertiary rounded-2">
             <div class="my-3">
                 <label class=" mb-1" for="adminName">اسم المستخدم</label>
                 <input value="" id="adminName" class=" form-control" type="text">
@@ -115,14 +115,12 @@
             <button id="displayUserTableBtn" class="btn btn-secondary w-100 mt-5">get all users</button>
         </form>
     </section>
-
     <section id="dangerMsg" class="container my-3 rounded-2 d-none bg-danger-subtle p-3 text-center text-danger">
         <div>
             <p class="m-0 my-1">!!! user name or password is not correct</p>
             <p class="m-0 my-1">!!! please register again as admin</p>
         </div>
     </section>
-
     <section id="userTable" class="d-none container-md text-center">
         <!-- <button id="getBtn" class="w-75 my-4 btn btn-success">View All Users</button> -->
         <table class="table text-center">
@@ -135,16 +133,19 @@
             <tbody id="userData">
 
             </tbody>
+            <div style="height: 50vh;" id="spinnerLoad" class=" d-flex align-items-center justify-content-center">
+                <i class="fa-solid fa-spinner text-success fa-spin fa-5x"></i>
+            </div>
         </table>
     </section>
-
-
+    <!-- 0000000000000000000000 -->
     <footer id="footer" class="w-100 py-5 bg-body-tertiary">
         <div>
             <div class="container bg-">
                 <div class="row align-items-center">
                     <div class="col-md-4">
-                        <a href="../index.html"> <img class="w-100 rounded-circle" src="images/final img/pp-.png" alt=""></a>
+                        <a href="../index.html"> <img class="w-100 rounded-circle" src="images/final img/pp-.png"
+                                alt=""></a>
                     </div>
                     <div class="col-md-4 w-sm-100 my-3">
                         <div class="d-flex w-75 m-auto bg- h-100 align-items-center icons justify-content-around">
