--- a/src/photos.html
+++ b/src/photos.html
@@ -28,12 +28,12 @@
 <body id="top">
     <nav id="mainNav" class="navbar fixed- d- bg-white navbar-expand-lg top-0 start-0 end-0 bg-body-">
         <div data-wow-delay=".3s" class="container  bg-">
-            <a class="navbar-brand" href="../index.html"><img class="-circle" src="images/logo-Apoc-2022.png"
+            <a class="navbar-brand" href="../index.html"><img class="rounded-" src="images/logo-Apoc-2022.png"
                     alt=""></a>
             <div class="collapse navbar-collapse d-flex align-items-center bg-" id="navbarSupportedContent">
                 <ul class="navbar-nav text-dark bg- mt-0 m-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link text-  fw-bold" aria-current="page" href="../index.html">الرئيسية</a>
+                        <a class="nav-link text- fw-bold" aria-current="page" href="../index.html">الرئيسية</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text- fw-bold" href="about.html">عن الجمعية</a>
@@ -48,7 +48,7 @@
                         <a class="nav-link text- fw-bold" href="videos.html"> الفيدوهات </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text- fw-bold" href="register.html"> اتبرع الآن</a>
+                        <a class="nav-link text- fw-bold" href="tbroaa.html"> اتبرع الآن</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text- fw-bold" href="#footer"> تواصل معنا</a>
@@ -67,10 +67,10 @@
                                 زكاتك</a>
                         </li>
                     </a>
-                    <a href="register.html">
+                    <a href="tbroaa.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
                             <img class="icon-img rounded-circle" src="images/final img/اتبرع-الان..png" alt="">
-                            <a class="nav-link  mx-1 fw-bold" href="register.html">اتبرع الآن</a>
+                            <a class="nav-link  mx-1 fw-bold" href="tbroaa.html">اتبرع الآن</a>
                         </li>
                     </a>
                 </ul>
@@ -79,7 +79,7 @@
     </nav>
     <nav id="smNav" class="navbar overflow-hidden d-none bg-white navbar-expand-lg top-0 start-0 end-0 bg-body-">
         <div class="container  bg- d-flex flex-nowrap">
-            <a class="navbar-brand bg-" href="../index.html"><img class="-circle" src="images/logo-Apoc-2022.png"
+            <a class="navbar-brand bg-" href="../index.html"><img class="r-circle" src="images/logo-Apoc-2022.png"
                     alt=""></a>
             <div class="collapse navbar-collapse  d-flex align-items-center bg-" id="navbarSupportedContent">
                 <ul class="navbar-nav p-0 text-center bg- me-auto ms-3 mb-2 bg- mb-lg-0">
@@ -90,10 +90,10 @@
                                 زكاتك</a>
                         </li>
                     </a>
-                    <a href="register.html">
+                    <a href="tbroaa.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
                             <img class="icon-img rounded-circle" src="images/final img/اتبرع-الان..png" alt="">
-                            <a class="nav-link  mx-1 fw-bold" href="register.html">اتبرع الآن</a>
+                            <a class="nav-link  mx-1 fw-bold" href="tbroaa.html">اتبرع الآن</a>
                         </li>
                     </a>
                 </ul>
@@ -114,19 +114,19 @@
             <i id="closeDropNav" class="fa-solid fa-2xl mb-4 pointer fa-xmark"></i>
             <ul class="navbar-nav text-white p-3 text-end  mt-0 m-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link text- active fw-bold" aria-current="page" href="../index.html">الرئيسية</a>
+                    <a class="nav-link text- fw-bold" aria-current="page" href="../index.html">الرئيسية</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text- fw-bold" href="about.html">عن الجمعية</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text- fw-bold" href="photos.html"> البوم الصور </a>
+                    <a class="nav-link text- active fw-bold" href="photos.html"> البوم الصور </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text- fw-bold" href="videos.html"> الفيدوهات </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text- fw-bold" href="register.html"> اتبرع الآن</a>
+                    <a class="nav-link text- fw-bold" href="tbroaa.html"> اتبرع الآن</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text- fw-bold" href="#footer"> تواصل معنا</a>
