--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                                     <div class="progress-bar bg-success">75%</div>
                                 </div>
                                 <div>
-                                    <a href="src/register.html"><button
+                                    <a href="src/tbroaa.html"><button
                                             class="btn btn-warning px-5 py-2">تبرع</button></a>
                                     <button class="btn btn-outline-primary px-5 py-2">مزيد من المعلومات</button>
                                 </div>
@@ -448,7 +448,7 @@
                                 </div>
                             </div>
                             <div class="d-flex fw-bold bg- mt-5 justify-content-between">
-                                <a href="src/register.html" class="bg- w-100"><button
+                                <a href="src/tbroaa.html" class="bg- w-100"><button
                                         class="btn fw-bold w-100 btn-outline-success">اتبرع الان <i
                                             class="fa-solid fa-money-bill-trend-up fa-lg me-1 pointer"></i></button></a>
                             </div>
@@ -471,7 +471,7 @@
                                 </div>
                             </div>
                             <div class="d-flex fw-bold bg- mt-5 justify-content-between">
-                                <a href="src/register.html" class="bg- w-100"><button
+                                <a href="src/tbroaa.html" class="bg- w-100"><button
                                         class="btn fw-bold w-100 btn-outline-success">اتبرع الان <i
                                             class="fa-solid fa-money-bill-trend-up fa-lg me-1 pointer"></i></button></a>
                             </div>
@@ -492,7 +492,7 @@
                                 </div>
                             </div>
                             <div class="d-flex fw-bold bg- mt-5 justify-content-between">
-                                <a href="src/register.html" class="bg- w-100"><button
+                                <a href="src/tbroaa.html" class="bg- w-100"><button
                                         class="btn fw-bold w-100 btn-outline-success">اتبرع الان <i
                                             class="fa-solid fa-money-bill-trend-up fa-lg me-1 pointer"></i></button></a>
                             </div>
@@ -514,7 +514,7 @@
                                 </div>
                             </div>
                             <div class="d-flex fw-bold bg- mt-5 justify-content-between">
-                                <a href="src/register.html" class="bg- w-100"><button
+                                <a href="src/tbroaa.html" class="bg- w-100"><button
                                         class="btn fw-bold w-100 btn-outline-success">اتبرع الان <i
                                             class="fa-solid fa-money-bill-trend-up fa-lg me-1 pointer"></i></button></a>
                             </div>
@@ -536,7 +536,7 @@
                                 </div>
                             </div>
                             <div class="d-flex fw-bold bg- mt-5 justify-content-between">
-                                <a href="src/register.html" class="bg- w-100"><button
+                                <a href="src/tbroaa.html" class="bg- w-100"><button
                                         class="btn fw-bold w-100 btn-outline-success">اتبرع الان <i
                                             class="fa-solid fa-money-bill-trend-up fa-lg me-1 pointer"></i></button></a>
                             </div>
@@ -560,12 +560,12 @@
                             </div>
                             <div class="d-flex fw-bold bg- mt-5 justify-content-between">
                                 <div class="bg- w-100 ms-2">
-                                    <a href="src/register.html" class="bg- w-100"><button
+                                    <a href="src/tbroaa.html" class="bg- w-100"><button
                                             class="btn fw-bold w-100 btn-outline-success">اتبرع الان <i
                                                 class="fa-solid fa-money-bill-trend-up fa-lg me-1 pointer"></i></button></a>
                                 </div>
                                 <div class="bg- w-100 me-2">
-                                    <a href="src/register.html" class="bg- w-100"><button
+                                    <a href="src/calculation.html" class="bg- w-100"><button
                                             class="btn fw-bold w-100 btn-outline-primary">احسب زكاتك<i
                                                 class="fa-solid fa-money-bill-trend-up fa-lg me-1 pointer"></i></button></a>
                                 </div>
