--- a/src/photos.html
+++ b/src/photos.html
@@ -135,9 +135,9 @@
         </div>
     </div>
     <!-- ******************************* -->
-    <section class="my-5">
-        <div id="imgContainer" class="container">
-            <div class="row justify-content-center g-3">
+    <section class="my-5 bg-body-tertiary">
+        <div id="imgContainer" class="container p-4">
+            <div class="row justify-content-center text-center g-3">
                 <div class="col-md-3">
                     <div>
                         <img class="rounded-2 w-100" src="images/tbro3 12.jpg" alt="">
