--- a/src/register.html
+++ b/src/register.html
@@ -67,12 +67,13 @@
                                 زكاتك</a>
                         </li>
                     </a>
-                    <a href="tbroaa.html">
+                    <a href="allUsersForAdmin.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
-                            <img class="icon-img rounded-circle" src="images/final img/اتبرع-الان..png" alt="">
-                            <a class="nav-link  mx-1 fw-bold" href="tbroaa.html">اتبرع الآن</a>
+                            <img class="icon-img rounded-circle" src="images/final img/logoadmin.png" alt="">
+                            <a class="nav-link text-decoration-none   mx-1 fw-bold" href="allUsersForAdmin.html">تسجيل الدخول</a>
                         </li>
                     </a>
+        
                 </ul>
             </div>
         </div>
@@ -90,10 +91,10 @@
                                 زكاتك</a>
                         </li>
                     </a>
-                    <a href="tbroaa.html">
+                    <a href="allUsersForAdmin.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
-                            <img class="icon-img rounded-circle" src="images/final img/اتبرع-الان..png" alt="">
-                            <a class="nav-link  mx-1 fw-bold" href="tbroaa.html">اتبرع الآن</a>
+                            <img class="icon-img rounded-circle" src="images/final img/logoadmin.png" alt="">
+                            <a class="nav-link text-decoration-none   mx-1 fw-bold" href="allUsersForAdmin.html">تسجيل الدخول</a>
                         </li>
                     </a>
                 </ul>
@@ -136,7 +137,7 @@
     </div>
     <!-- ************************ -->
     <section class="bg-body-tertiary form-container container d-flex justify-content-evenly m-auto p-4 rounded-3 shadow my-3 bg">
-        <form id="formFristRegister" class="text-white p-3 w-100">
+        <form id="formFristRegister" class="text-white p-3 w-50">
             <!-- <h3 class="text-center fs-2 fw-bolder border-bottom pb-3 border-3 my-2 text-success">اول مرة تسجل ؟؟</h3> -->
             <div class="my-2">
                 <label for="userName" class="pb-1 fw-bold fs-5"> الاسم ثلاثي باللغة العربية : <span id="userValid"
@@ -161,9 +162,7 @@
 
             <button type="" id="paymentBtn" class=" btn btn-success w-100 mt-4">اتبرع الآن</button>
             <button type="" id="spinnerLoadBtn" class=" btn btn-success w-100 mt-4 d-none"><i class="fa-solid fa-spinner fa-spin fa-xl"></i></button>
-            <a href="allUsersForAdmin.html" class="w-100 mt-4 btn btn-secondary">users <span
-                    class="fw-bolder text-dark">*(Admins Only)</span></a>
-        </form>
+            </form>
 
     </section>
     <!-- ************************ -->
