--- a/index.html
+++ b/index.html
@@ -370,20 +370,20 @@
                                 <button type="button" class="btn btn-secondary dropdown-toggle"
                                     data-bs-toggle="dropdown" aria-expanded="false"> قيم التبرع الشهري </button>
                                 <ul class="dropdown-menu dropdown-menu-end">
-                                    <li><button class="dropdown-item" type="button">50</button></li>
-                                    <li><button class="dropdown-item" type="button">100</button></li>
-                                    <li><button class="dropdown-item" type="button">500</button></li>
-                                    <li><button class="dropdown-item" type="button">1000</button></li>
-                                    <li><button class="dropdown-item" type="button">2000</button></li>
-                                    <li><button class="dropdown-item" type="button">5000</button></li>
-                                    <li><button class="dropdown-item" type="button">10,000</button></li>
+                                    <li><button value="50" class="dropdown-item" type="button">50</button></li>
+                                    <li><button value="100" class="dropdown-item" type="button">100</button></li>
+                                    <li><button value="500" class="dropdown-item" type="button">500</button></li>
+                                    <li><button value="1000" class="dropdown-item" type="button">1000</button></li>
+                                    <li><button value="2000" class="dropdown-item" type="button">2000</button></li>
+                                    <li><button value="5000" class="dropdown-item" type="button">5000</button></li>
+                                    <li><button value="10000" class="dropdown-item" type="button">10,000</button></li>
                                 </ul>
                             </div>
                             <div class="mx-3 mt-4 pt-3 bg-">
                                 <div
                                     class="d-flex tot-calc align-items-center justify-content-between bg-body-tertiary rounded-3 ">
-                                    <h2 class="bg-body-tertiary fw-bold text-dark"> قيمة التبرع الشهري : <span id="total"
-                                            class="text-success fs-3">.</span> جنيه
+                                    <h2 class="bg-body-tertiary fw-bold text-dark"> قيمة التبرع الشهري : <span
+                                            id="choosenValue" class="text-success fs-3">.</span> جنيه
                                     </h2>
                                 </div>
                             </div>
@@ -611,7 +611,6 @@
                     <div class="col-md-4 bg- w-sm-100 text-white">
                         <h2 class="h1 mb-4">تواصل معنا</h2>
                         <div class="d-flex my-3 align-items-center">
-                            <i class="fa-solid text-success fa- fa-location-pin"></i>
                             <p class="me-2 m-0">
                             <ol class="pe-3" type="i">
                                 <li class="mb-2 my-text-location"> 13 ش عبد الحميد بدوي – محطة الرمل – الدور الثاني –
@@ -625,6 +624,14 @@
                                     المدينة.</li>
                             </ol>
                             </p>
+                        </div>
+                        <div class="d-flex">
+                            <i class="fa-solid ps-2 text-success fa- fa-location-pin"></i>
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3412.5888674079633!2d29.905048100000002!3d31.204410999999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f5c38cae094c59%3A0x974cf5d1b30c37f4!2zMTMg2LnYqNivINin2YTYrdmF2YrYryDYqNiv2YjZitiMINin2YTZhdiz2YTYqSDYtNix2YLYjCDYp9mE2LnYt9in2LHZitmG2Iwg2YXYrdin2YHYuNipINin2YTYpdiz2YPZhtiv2LHZitipIDUzNzMwMTA!5e0!3m2!1sar!2seg!4v1748972696952!5m2!1sar!2seg"
+                                class="w-100 m-0" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+
                         </div>
                         <div class="d-flex my-3 align-items-center">
                             <i class="fa-solid text-primary fa- fa-phone"></i>
