--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
                     </div>
                     <div class="col-md-4 bg- w-sm-100 text-white">
                         <h2 class="h1 mb-4">تواصل معنا</h2>
-                        <div class="d-flex my-3 align-items-center">
+                        <div class="">
                             <p class="me-2 m-0">
                             <ol class="pe-3" type="i">
                                 <li class="mb-2 my-text-location"> 13 ش عبد الحميد بدوي – محطة الرمل – الدور الثاني –
