--- a/src/cancel.html
+++ b/src/cancel.html
@@ -140,8 +140,7 @@
                     </div>
                     <div class="col-md-4 w-sm-100 text-white">
                         <h2 class="h1 mb-4">تواصل معنا</h2>
-                        <div class="d-flex my-3 align-items-center">
-                            <i class="fa-solid text-success fa- fa-location-pin"></i>
+                        <div class="">
                             <p class="me-2 m-0">
                             <ol class="pe-3" type="i">
                                 <li class="mb-2 my-text-location"> 13 ش عبد الحميد بدوي – محطة الرمل – الدور الثاني –
@@ -155,6 +154,14 @@
                                     المدينة.</li>
                             </ol>
                             </p>
+                        </div>
+                        <div class="d-flex">
+                            <i class="fa-solid ps-2 text-success fa- fa-location-pin"></i>
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3412.5888674079633!2d29.905048100000002!3d31.204410999999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f5c38cae094c59%3A0x974cf5d1b30c37f4!2zMTMg2LnYqNivINin2YTYrdmF2YrYryDYqNiv2YjZitiMINin2YTZhdiz2YTYqSDYtNix2YLYjCDYp9mE2LnYt9in2LHZitmG2Iwg2YXYrdin2YHYuNipINin2YTYpdiz2YPZhtiv2LHZitipIDUzNzMwMTA!5e0!3m2!1sar!2seg!4v1748972696952!5m2!1sar!2seg"
+                                class="w-100 m-0" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+
                         </div>
                         <div class="d-flex my-3 align-items-center">
                             <i class="fa-solid text-primary fa- fa-phone"></i>
