--- a/src/register.html
+++ b/src/register.html
@@ -160,7 +160,7 @@
                 <input class="form-control" type="number" name="userPayment" id="userPayment" value="">
             </div>
 
-            <button type="" id="paymentBtn" class=" btn btn-success w-100 mt-4">اتبرع الآن</button>
+            <button disabled type="" id="paymentBtn" class=" btn btn-success w-100 mt-4">اتبرع الآن</button>
             <button type="" id="spinnerLoadBtn" class=" btn btn-success w-100 mt-4 d-none"><i class="fa-solid fa-spinner fa-spin fa-xl"></i></button>
             </form>
 
